<resources>
    <string name="app_name">Firebase Login SignUp</string>
    <string name="no_account">Not have account? <b>SignUp</b></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="you_re_logged_in_as">You\'re Logged-in as</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="sign_up">Sign Up</string>
</resources>